--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,6 @@ intellij {
 }
 patchPluginXml {
     changeNotes """
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>"""
+      TabColor-1.0.<br>
+      <em></em>"""
 }
